1.12--
	* Ported to ARM platform
1.11 --
	* Fix compilation with PIC
	* polling hint now refers to /dev/cdrom instead of /dev/scd0
	* fix calculations for systems that vary in power draw proc info
	* Display mwait usage
	* fix EOF at input
	* add --version|-v option
	* spelling error in tips.

1.10 --
	* add the "P" key to show the PIDs of the processes when possible
	* Add support for reading C-state info via sysfs
	  (Kevin Hilman, Venki Pallipadi)
	* Show USB suspend statistics of USB devices in "-d" dump mode
	* Show USB suspend statistics as a low priority hint for busy
	devices
	* Add support for using the sysfs power supply class
	  (Donnie Berkholz)
	* Fix USB suspend suggestion to take semi blacklisted stuff into
	  account
	* Add support for Intel's 4965 wireless power saving mode
	* On new enough cpus (and kernel 2.6.25), report which C-states the
	  cpu and bios report/support.

1.9 --
	* add support for mac80211 based wireless power saving
	* improve bluetooth inactivity detection (David Woodhouse)
	* report USB activity (needs 2.6.24-rc kernel)
	* support the newly reported interrupt events in 2.6.24-rc

1.8 --
	* add suggestion to increase VM writeback timeout
	* add suggestion to enable INOTIFY in the kernel
	* fix socket fd leak, found by Nikerabbit on #powertop
	* Add support for deferrable timers (Scott Lamb)
	* Add active hint to enable USB autosuspend on Fedora 7
 	* Show blue color if the cpu is 25% or more busy to indicate
	  that idle wakeups no longer is the nr 1 power causer
	  (Santiago Gala)
  	* merge the -d option from Bill Nottingham (Fedora) to allow
	  automated collection of data

1.7 --  Jun 17th, 2007
	* add suggestion to disable TV out
	* add suggestion to disable Wake-On-Lan for unused ethernet
	* Show P-states (frequencies)

1.6 --	Jun 8th, 2007
	* Add suggestion to rf_kill unused wireless interfaces
	* Propose killing "sealert"; this is a new thing in F7 that wakes up
	  10 times per second for no reason