@@ -30,6 +30,7 @@
 #include <sys/types.h>
 #include <dirent.h>
 #include <assert.h>
+#include <limits.h>
 
 #include "powertop.h"
 
