@@ -29,8 +29,13 @@
 #include <stdint.h>
 #include <sys/types.h>
 #include <dirent.h>
-#include <ncurses/ncurses.h>
+#ifdef USE_SLANG
+  #include <slcurses.h>
+#else
+  #include <ncurses/ncurses.h>
+#endif
 #include <time.h>
+#include <wchar.h>
 
 #include "powertop.h"
 
@@ -120,6 +125,7 @@ void initialize_curses(void)
 	cbreak();		/* take input chars one at a time, no wait for \n */
 	noecho();		/* dont echo input */
 	curs_set(0);		/* turn off cursor */
+//	use_default_colors();
 
 	init_pair(PT_COLOR_DEFAULT, COLOR_WHITE, COLOR_BLACK);
 	init_pair(PT_COLOR_HEADER_BAR, COLOR_BLACK, COLOR_WHITE);
@@ -138,17 +144,17 @@ void show_title_bar(void)
 	int i;
 	int x;
 	wattrset(title_bar_window, COLOR_PAIR(PT_COLOR_HEADER_BAR));
-	wbkgd(title_bar_window, COLOR_PAIR(PT_COLOR_HEADER_BAR));   
+//	wbkgd(title_bar_window, COLOR_PAIR(PT_COLOR_HEADER_BAR));   
 	werase(title_bar_window);
 
-	print(title_bar_window, 0, 0,  "     PowerTOP version %s      (C) 2007 Intel Corporation", VERSION);
+	print(title_bar_window, 0, 0,  "     PowerTOP version %s      (C) 2010 Intel Corporation", VERSION);
 
 	wrefresh(title_bar_window);
 
 	werase(status_bar_window);
 
 	x = 0;
-	for (i=0; i < 10; i++) {
+	for (i=0; i<10; i++) {
 		if (strlen(status_bar_slots[i])==0)
 			continue;
 		wattron(status_bar_window, A_REVERSE);
@@ -165,7 +171,7 @@ void show_cstates(void)
 	werase(cstate_window);
 
 	for (i=0; i < MAX_CSTATE_LINES; i++) {
-		if (i == topcstate + 1)
+		if (i == topcstate+1)
 			wattron(cstate_window, A_BOLD);
 		else
 			wattroff(cstate_window, A_BOLD);			
@@ -176,7 +182,7 @@ void show_cstates(void)
 	}
 
 	for (i=0; i < MAX_NUM_PSTATES; i++) {
-		if (i == topfreq + 1)
+		if (i == topfreq+1)
 			wattron(cstate_window, A_BOLD);
 		else
 			wattroff(cstate_window, A_BOLD);			
@@ -251,6 +257,7 @@ void show_wakeups(double d, double interval, double C0time)
 {
 	werase(wakeup_window);
 
+#if 0
 	wbkgd(wakeup_window, COLOR_PAIR(PT_COLOR_RED));   
 	if (d <= 25.0)
 		wbkgd(wakeup_window, COLOR_PAIR(PT_COLOR_YELLOW));   
@@ -263,7 +270,8 @@ void show_wakeups(double d, double interval, double C0time)
 	 */
 	if (C0time > 25.0)
 		wbkgd(wakeup_window, COLOR_PAIR(PT_COLOR_BLUE));   
-		
+#endif
+	
 	wattron(wakeup_window, A_BOLD);
 	print(wakeup_window, 0, 0, _("Wakeups-from-idle per second : %4.1f\tinterval: %0.1fs\n"), d, interval);
 	wrefresh(wakeup_window);
